# tsca-tezos

docs/: README.rst
scripts/: install_build_deps.sh
src/lib_client_base_unix/: client_config.ml  client_main_run.ml
src/lib_client_commands/: client_p2p_commands.ml
src/lib_rpc_http/: RPC_client.ml
src/lib_version/: dune
tests_python/: requirements.txt
tests_python/client/: client.py
tests_python/daemons/: baker.py  endorser.py
